feat: build api get all user transactions
