# src/routes/transaction/index.js
@@ -8,6 +8,7 @@ const { transactionValidation } = require('../../validations')
 const router = express.Router()
 
 router.use(authentication('Seller'))
+router.get('', asyncHandler(transactionController.getAllTransactions))
 router.post('/deposit', validate(transactionValidation.deposit), asyncHandler(transactionController.depositUserBalance))
 
 module.exports = router
